# macroDashboard

./: .dockerignore  .gitignore  Dockerfile  End Goal.md  Initial Plan.md  README.md  ingest_all.py  mock_data.py  pyproject.toml  test_fred.py
data/gold/regime_scores/: regime_report.json
data_demo/config/: indicator_manifest.json  source_registry.json
data_demo/gold/chart_specs/: derived_10y_minus_2y.json  fred_cpiaucsl.json  fred_cpilfesl.json  fred_dgs10.json  fred_dgs2.json  fred_effr.json  fred_gdpc1.json  fred_icsa.json  fred_indpro.json  fred_payems.json  fred_pcepilfe.json  fred_rsafs.json  fred_t10yie.json  fred_umcsent.json  fred_unrate.json
data_demo/gold/derived_series/: DERIVED_10Y_MINUS_2Y.json  DERIVED_10Y_MINUS_3M.json  DERIVED_BBD_MINUS_VIX.json  DERIVED_GROWTH_MINUS_INFLATION_MOMENTUM.json  DERIVED_HEADLINE_MINUS_CORE_CPI.json  DERIVED_HY_MINUS_IG_OAS.json  DERIVED_REAL_POLICY_RATE_PROXY.json
data_demo/gold/indicators/: FRED_BAMLC0A0CM.json  FRED_BAMLH0A0HYM2.json  FRED_CPIAUCSL.json  FRED_CPILFESL.json  FRED_DCOILWTICO.json  FRED_DGS10.json  FRED_DGS2.json  FRED_DRTSCILM.json  FRED_DTWEXBGS.json  FRED_EFFR.json  FRED_GDPC1.json  FRED_ICSA.json  FRED_INDPRO.json  (+13 more)
macro_dashboard/: __init__.py  adapters.py  cli.py  contracts.py  io_utils.py  llm_text.py  main.py  pipeline.py  probabilities.py  registry.py
prompts/: Election Fiscal Regime Trade Map  FOMC Narrative Shift Analysis.md  Geopolitical Situaion Analysis.md  Instructions For Using Prompts.md  Macroeconomic Regime Classification.md  Portfolio Exposure.md
tests/: test_pipeline.py
(+1 files in other folders)
